--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,20 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.avalon-framework-api-4.3.1.jar=/Users/stephen/Desktop/fop-2.3/fop/lib/avalon-framework-api-4.3.1.jar
+file.reference.avalon-framework-impl-4.3.1.jar=/Users/stephen/Desktop/fop-2.3/fop/lib/avalon-framework-impl-4.3.1.jar
+file.reference.batik-all-1.10.jar=/Users/stephen/Desktop/fop-2.3/fop/lib/batik-all-1.10.jar
+file.reference.commons-io-1.3.1.jar=/Users/stephen/Desktop/fop-2.3/fop/lib/commons-io-1.3.1.jar
+file.reference.commons-logging-1.0.4.jar=/Users/stephen/Desktop/fop-2.3/fop/lib/commons-logging-1.0.4.jar
+file.reference.fontbox-2.0.7.jar=/Users/stephen/Desktop/fop-2.3/fop/lib/fontbox-2.0.7.jar
+file.reference.fop.jar=/Users/stephen/Desktop/fop-2.3/fop/build/fop.jar
+file.reference.serializer-2.7.2.jar=/Users/stephen/Desktop/fop-2.3/fop/lib/serializer-2.7.2.jar
 file.reference.sqljdbc4.jar=/Users/stephen/Desktop/sqljdbc4.jar
+file.reference.xalan-2.7.2.jar=/Users/stephen/Desktop/fop-2.3/fop/lib/xalan-2.7.2.jar
+file.reference.xercesImpl-2.9.1.jar=/Users/stephen/Desktop/fop-2.3/fop/lib/xercesImpl-2.9.1.jar
+file.reference.xml-apis-1.3.04.jar=/Users/stephen/Desktop/fop-2.3/fop/lib/xml-apis-1.3.04.jar
+file.reference.xml-apis-ext-1.3.04.jar=/Users/stephen/Desktop/fop-2.3/fop/lib/xml-apis-ext-1.3.04.jar
+file.reference.xmlgraphics-commons-2.3.jar=/Users/stephen/Desktop/fop-2.3/fop/lib/xmlgraphics-commons-2.3.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -39,7 +52,20 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.jstl.classpath}:\
-    ${file.reference.sqljdbc4.jar}
+    ${file.reference.sqljdbc4.jar}:\
+    ${file.reference.avalon-framework-api-4.3.1.jar}:\
+    ${file.reference.avalon-framework-impl-4.3.1.jar}:\
+    ${file.reference.batik-all-1.10.jar}:\
+    ${file.reference.commons-io-1.3.1.jar}:\
+    ${file.reference.commons-logging-1.0.4.jar}:\
+    ${file.reference.fontbox-2.0.7.jar}:\
+    ${file.reference.serializer-2.7.2.jar}:\
+    ${file.reference.xalan-2.7.2.jar}:\
+    ${file.reference.xercesImpl-2.9.1.jar}:\
+    ${file.reference.xml-apis-1.3.04.jar}:\
+    ${file.reference.xml-apis-ext-1.3.04.jar}:\
+    ${file.reference.xmlgraphics-commons-2.3.jar}:\
+    ${file.reference.fop.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
